--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>{{title}}</h1>
+<app-nav></app-nav>
 
-<ul>
-  <li *ngFor='let customer of customers'>{{customer.id}} - {{customer.firstName}}</li>
-</ul>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
